overflow in mobile fix

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -60,6 +60,7 @@ body{
     color: rgba( 36, 48, 64, 1);
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
+    overflow-x: hidden;
 }
 
 h1 {
